[gd_scene load_steps=3 format=3 uid="uid://dst488r68ua45"]

[ext_resource type="Script" path="res://Scripts/UI/YearNode.gd" id="1_vrdcb"]
[ext_resource type="Texture2D" uid="uid://dmp3wf8w3oxpj" path="res://Assets/Images/UI/YearNodeGray.png" id="2_r5fop"]

[node name="YearNode" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vrdcb")

[node name="ContentVBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="YearLabel" type="Label" parent="ContentVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1"
horizontal_alignment = 1

[node name="Icon" type="TextureRect" parent="ContentVBox"]
layout_mode = 2
texture = ExtResource("2_r5fop")
stretch_mode = 5
